<resources>
    <string name="app_name">Spartan Relief</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Extension Services Office</string>
    <string name="nav_header_subtitle">Student Relief Application</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="dialog_fire_missiles">Fire Missile?</string>
    <string name="fire">Fire</string>
    <string name="cancel">Cancel</string>
    <string name="edit_text_hint">My hint string</string>
    <string name="menu_student_list">Students</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_donners">Donners</string>
    <string name="searchView">Search</string>
    <string name="full_name">Full Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="address">Address</string>
    <string name="menu_donner_form">Donner Form</string>
    <string name="title_donner">Donner\'s Form</string>
    <string name="menu_volunteer">Volunteer\'s</string>
    <string name="title_activity_volunteer_form">Volunteer Form</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="menu_donation">Donation\'s</string>
    <string name="title_activity_donation">Donations</string>
    <string name="name">Name</string>
    <string name="quantity">Quantity</string>
    <string name="title_activity_donner_donation_form">Donner\'s Donation\'s</string>
    <string name="menu_donner_donation_list">Donner\'s Donation\'s</string>
    <string name="date">Date</string>
    <string name="menu_student_relief_list">Student Relief\'s</string>
    <string name="request_date">Request Date</string>
    <string name="title_student_relief">Student Relief\'s</string>
    <string name="menu_relief_task_list">Relief Tasks</string>
    <string name="title_relief_task">Relief Task Form</string>
    <string name="title_student_panel">Student Panel</string>
    <string name="title_activity_student_form">Student Form</string>
    <string name="campus">Campus</string>
    <string name="course">Course</string>
    <string name="sr_code">Sr Code</string>
    <string name="action_edit_profile">Edit Profile</string>
    <string name="title_activity_volunteer_panel">Volunteer Panel</string>
    <string name="title_activity_student_relief_request_list">Student Relief Request List
    </string>
    <string name="title_activity_relief_request_donation_list">ReliefRequestDonationListActivity
    </string>
    <string name="title_relief_request_donation_list_activity">Relief Request Donations</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="action_register">Register</string>
    <string name="app_name_2">Student Relief</string>
    <string name="tab_volunteer">Volunteer</string>
    <string name="tab_student">Student</string>
    <string name="title_activity_register_panel">Register Panel</string>
    <string name="action_student_register">Register as Student</string>
    <string name="action_volunteer_register">Register as Volunteer</string>
    <string name="prompt_username">User Name</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_upload">Upload</string>
    <string name="field_donner">Donner</string>
    <string name="field_donation">Donation</string>
    <string name="dialog_student_activate_title">Activate Selected Student</string>
    <string name="dialog_student_deactivate_title">De activate Selected Student</string>
    <string name="dialog_student_activate_content_text">Do you want to activate this student?</string>
    <string name="action_logout">Log out</string>
    <string name="prompt_old_password">Old Password</string>
    <string name="prompt_new_password">New Password</string>
    <string name="label_please_fill_all_fields">Please fill all fields</string>
    <string name="text_all_fields_required">All fields are required</string>
    <string name="action_open_user_account">Open User Account</string>
    <string name="title_activity_user_form">User Form</string>
    <string name="menu_user_main">User</string>
    <string name="label_active">Active</string>
    <string name="prompt_invalid_fields">Some fields have invalid values!</string>
    <string name="dialog_student_deactivate_content_text">Do you want to de activate this student?</string>
    <string name="definition_activate_status">Activate User Account</string>
    <string name="nofitication_success_user_account_activated">User Account has been activated!</string>
    <string name="notification_success_user_account_deactivated">User Account has been de activated!</string>
    <string name="dialog_title_password_reset">Reset Password</string>
    <string name="dialog_message_password_reset">Please input your new password</string>
    <string name="dialog_message_password_default_reset">Do you want to reset password for this account?</string>
    <string name="notification_success_password_reset">Password has been reset successfully!</string>
    <string name="menu_employee">Employee Records</string>
    <string name="dialog_title_delete">Delete Record</string>
    <string name="dialog_message_delete">Do you want to delete this record?</string>
    <string name="hint_position">Position</string>
    <string name="action_change_password">Change Password</string>
    <string name="prompt_donation">Donation</string>
    <string name="prompt_quantity">Quantity</string>
    <string name="action_cancel">Cancel</string>
    <string name="label_not_active">Not Active</string>
    <string name="label_all">All</string>
    <string name="label_not_release">Not Released</string>
    <string name="label_release">Released</string>
    <string name="label_change_your_password">Change your password</string>
    <string name="dialog_title_select_your_action">Please select your action</string>
    <string name="label_dashboard">Dashboard</string>
    <string name="label_student">Students</string>
    <string name="label_student_count">0</string>
    <string name="dialog_title_address_confirmation">Confirming your address</string>
    <string name="login_title">Batangas State University</string>
    <string name="login_sub_title">Extension Services Office</string>
    <string name="label_pending_relief_request">You have pending relief request. Please wait for your donation.</string>
    <string name="dialog_message_new_student_register">You are now register.\nPlease wait for the admin for your account activation.\nYour default user name and password will be the same as your Sr Code.</string>
    <string name="dialog_title_success">Successful</string>
    <string name="dialog_message_request_donation">Your new relief request has been submitted!</string>
    <string name="dialog_button_positive">OK</string>
    <string name="dialog_button_yes">Yes</string>
    <string name="dialog_button_no">No</string>
    <string name="dialog_title_upload_quantity">Upload Quantity</string>
    <string name="dialog_message_upload_message">After this, you won\'t be able to modify or remove this record after uploading the quantity.</string>
    <string name="dialog_message_upload_not_applicable">The quantity of this donation was uploaded to donation\'s record. Your not allow to do any further.</string>
    <string name="dialog_title_login_failed">Authentication Failure</string>
    <string name="dialog_message_login_failed">Username or Password Invalid</string>
    <string name="dialog_message_relief_task_not_active">This record is not active. Your not allow to do any further.</string>
    <string name="dialog_title_relief_task_edit">Edit Relief Task</string>
    <string name="dialog_title_student_relief_request">New Relief Request</string>
    <string name="dialog_message_student_relief_request">You must be a resident of the listed area\'s to be qualify for receiving relief.</string>
    <string name="dialog_title_user_activate">Activate user account</string>
    <string name="dialog_message_activate_user">Do you want to activate this user account?</string>
    <string name="dialog_message_deactivate_user">Do you want to deactivate this user account?</string>
    <string name="dialog_title_user_deactivate">Deactivate user account</string>
    <string name="dialog_title_student_relief_suggestion">Please fill the form correctly.</string>
    <string name="dialog_content1_student_relief_suggestion">Member of the family</string>
    <string name="dialog_content2_student_relief_suggestion">Please indicate the things you mostly needed.</string>
    <string name="dialog_option_food">Foods</string>
    <string name="dialog_option_clothes">Clothes</string>
    <string name="dialog_option_temp_shelter">Temporary Shelter</string>
    <string name="dialog_option_others">Others</string>
    <string name="dialog_option_member_family">Member of Family</string>
    <string name="label_helper_member_family">Number of male and female, approximate age, etc. Please use comma (,) for multiple items.</string>
    <string name="label_helper_others">Diapers, Hygiene kits, etc.  Please use comma (,) for multiple items.</string>
    <string name="menu_course">Courses</string>
    <string name="label_course_list">Courses</string>
    <string name="course_title">Title</string>
    <string name="label_course_form">Course Form</string>
    <string name="courseInputList">Courses</string>
</resources>