<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_student_list"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_student_list" />

        <item
            android:id="@+id/nav_donners_list"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_donners" />
        <item
            android:id="@+id/nav_volunteer_list"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_volunteer" />
        <item
            android:id="@+id/nav_donation_list"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_donation" />
        <item
            android:id="@+id/nav_donners_donation_list"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_donner_donation_list" />

        <item
            android:id="@+id/nav_relief_task_list"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_relief_task_list" />
    </group>
</menu>