<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_employee">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.studentrelief.ui.home.HomeFragment_"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_student_list"
        android:name="com.example.studentrelief.ui.student.StudentListFragment_"
        android:label="@string/menu_student_list"
        tools:layout="@layout/fragment_student_list" />
    <fragment
        android:id="@+id/nav_donners_list"
        android:name="com.example.studentrelief.ui.donner.DonnerListFragment_"
        android:label="@string/menu_donners"
        tools:layout="@layout/fragment_donner_list" />
    <fragment
        android:id="@+id/nav_volunteer_list"
        android:name="com.example.studentrelief.ui.volunteer.VolunteerListFragment_"
        android:label="@string/menu_volunteer"
        tools:layout="@layout/fragment_donner_list" />
    <fragment
        android:id="@+id/nav_donation_list"
        android:name="com.example.studentrelief.ui.donation.DonationListFragment_"
        android:label="@string/menu_donation"
        tools:layout="@layout/fragment_donation_list" />
    <fragment
        android:id="@+id/nav_donners_donation_list"
        android:name="com.example.studentrelief.ui.donner_donation.DonnerDonationListFragment_"
        android:label="@string/menu_donner_donation_list"
        tools:layout="@layout/fragment_donner_donation_list" />

    <fragment
        android:id="@+id/nav_relief_task_list"
        android:name="com.example.studentrelief.ui.relief_task.ReliefTaskListFragment_"
        android:label="@string/menu_relief_task_list"
        tools:layout="@layout/fragment_relief_task_list" />
    <fragment
        android:id="@+id/nav_employee"
        android:name="com.example.studentrelief.ui.employee.EmployeeFragment_"
        android:label="@string/menu_employee"
        tools:layout="@layout/fragment_employee" />
</navigation>