<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_save"
        android:orderInCategory="100"
        android:title="@string/action_save"
        android:icon="@drawable/ic_baseline_save_24"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_open_user_account"
        android:orderInCategory="100"
        android:title="@string/action_open_user_account"
        android:icon="@drawable/ic_baseline_person_24"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="110"
        android:title="@string/action_delete"
        android:icon="@drawable/ic_baseline_delete_forever_24"
        app:showAsAction="collapseActionView" />
</menu>