<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_edit"
        android:orderInCategory="100"
        android:title="@string/action_edit_profile"
        android:icon="@drawable/ic_baseline_edit_24"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_change_password"
        android:orderInCategory="100"
        android:title="@string/action_change_password"
        android:icon="@drawable/ic_baseline_vpn_key_24"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        android:icon="@drawable/ic_baseline_power_settings_new_24"
        app:showAsAction="collapseActionView" />
</menu>